golden/error/runtime_collection_kv_scalar.test
{
  "key": "value",
  "single",
}

# output:
 --> stdin:3:2
  |
3 |   "single",
  |   ^~~~~~~~
Error: Expected key-value, not a scalar element.

 --> stdin:2:7
  |
2 |   "key": "value",
  |        ^
Note: The collection is a dict and not a set, because of this key-value.
